<?xml version="1.0"?>
<package>
  <name>ldso</name>
  <version>1.0.0</version>
  <description>

    ROS Wrapper LDSO.

  </description>

  <author>Waseem Hathot</author>
  <license>to be added</license>
  <maintainer email="waseem.hathot@outlook.com">
    Waseem Hathot
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
