<package>
    <name>orb_slam3_wrapper</name>
    <version>3.0.0</version>
    <description>
        Orb-Slam3 ROS wrapper
    </description>
    <maintainer email="guylevy84@gmail.com">guy</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>pluginlib</run_depend>

    <export>
        <nodelet plugin="${prefix}/orb_slam3_mono_nodelet.xml"/>
    </export>
</package>
